get students list with marks based on performances
